[package]
name = "qinpel-wiz"
description = "Qinpel Wizard - Transfer, compile and installs development bundles of graphical user and command line applications for the Qinpel (Quick Interface for Pointel) Platform."
repository = "https://github.com/emuvi/qinpel-wiz/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.3"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
liz = "0.1.12"
