[package]
name = "qinpel-wiz"
description = "QinpelWiz ( Qinpel Wizard ) is a command that transfers, compiles and installs selected bundles of graphical user and command interfaces for the Qinpel, the Quick Interface for Pointel platform."
repository = "https://github.com/emuvi/qinpel-wiz/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.3"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
liz = "0.1.12"
