[package]
name = "qinpel-wiz"
description = "QinpelWiz ( Qinpel Wizard ) is a command program that transfers, compiles and installs configured bundles of user interfaces and command programs for the Qinpel, the Quick Interface for Pointel platform."
repository = "https://github.com/emuvi/qinpel-wiz/"
authors = ["Éverton M. Vieira"]
license = "LGPL-3.0-only"
version = "0.1.3"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
liz = "0.1.12"
